# rustyfin

./: .gitignore  Cargo.toml  README.md  install.sh
mediastation-cli/: Cargo.toml
mediastation-cli/src/: main.rs
mediastation-core/: Cargo.toml
mediastation-core/src/: config.rs  lib.rs  setup.rs
mediastation-core/src/models/: mod.rs
mediastation-core/src/services/: library.rs  media_info.rs  mod.rs  organize.rs  qbittorrent.rs  search.rs  subtitle.rs  trakt.rs
mediastation-core/src/ui/: app.rs  mod.rs  render.rs  state.rs  theme.rs
