[package]
name = "mediastation-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mediastation-core = { path = "../mediastation-core" }
clap = { version = "4.6", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"

[[bin]]
name = "mediastation"
path = "src/main.rs"