[package]
name = "mediastation-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.29"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTML/XML parsing
scraper = "0.21"
quick-xml = "0.37"

# File system utilities
walkdir = "2.5"
notify = "7"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Regex for parsing
regex = "1.11"

# Concurrency
parking_lot = "0.12"
async-trait = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# URL parsing
url = "2.5"
urlencoding = "2.1"

# Fuzzy matching
fuzzy-matcher = "0.3"

[features]
default = []
dev = []