[package]
name = "mediastation-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.29"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTML parsing
scraper = "0.21"

# File system utilities
walkdir = "2.5"
dirs = "5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"

# Regex for parsing
regex = "1.11"

# Concurrency
parking_lot = "0.12"

# Error handling
anyhow = "1.0"

# URL encoding
urlencoding = "2.1"

[features]
default = []
dev = []
